# VoxSpell

./: .editorconfig  .gitignore  .oxfmtrc.json  .yarnrc.yml  AGENTS.md  NOTICE  README.md  oxlint.config.mts  package.json  project.tiny  tsconfig.base.json
.agents/skills/karpathy-guidelines/: SKILL.md
.agents/skills/tiny-docs/: SKILL.md
.agents/skills/tiny-docs/references/: configuration.md  getting-started.md  markdown.md  publishing.md  rules.md
.agents/skills/tiny-docs/references/custom-pages/: index.md  page-development.md
.agents/skills/tiny-docs/references/examples/: SWOT.xml  architecture.excalidraw  editor-saved.drawio  file.txt  mindmap.md
apps/daemon/: nodemon.json  package.json  rspack.config.mjs  tsconfig.json  vitest.config.ts
apps/daemon/src/: app.ts  audio-capture.ts  homebridge-dbus-native.d.ts  index.ts  realtime-asr.ts  session-coordinator.ts  session-gate.ts  session-state.ts
apps/daemon/src/ai/: create-configured-text-polisher.ts
apps/daemon/src/asr/: create-configured-asr-provider.ts  test-asr-provider.ts
apps/daemon/src/audio/: pcm-level.ts  pw-record-audio-capture.ts  wave-file-audio-capture.ts  wave-pcm.ts
apps/daemon/src/configuration/: daemon-config-manager.ts  daemon-dictionary-manager.ts
apps/daemon/src/dev/: deterministic-asr.ts  deterministic-audio-capture.ts
apps/daemon/src/fcitx/: fcitx-config-client.ts
apps/daemon/src/rpc/: daemon-rpc-connection.ts
apps/daemon/src/runtime/: create-daemon.ts
apps/daemon/src/tools/: asr-fixtures-smoke.ts  asr-microphone-smoke.ts  asr-smoke-session.ts  audio-smoke.ts
apps/daemon/src/transport/: content-length-limit.ts  unix-socket-server.ts
apps/daemon/test/: app.test.ts  asr-provider-test.test.ts  content-length-limit.test.ts  daemon-config-manager.test.ts  daemon-dictionary-manager.test.ts  daemon-rpc-connection.test.ts  daemon-runtime.test.ts  deterministic-backends.test.ts  fcitx-config-client.test.ts  openai-compatible-daemon.test.ts  pcm-level.test.ts  pw-record-audio-capture.test.ts  session-coordinator.test.ts  session-state.test.ts  unix-socket-server.test.ts  wave-pcm.test.ts
apps/daemon/test/fakes/: async-queue.ts  fake-audio-capture.ts  fake-realtime-asr.ts  fake-text-polisher.ts  in-memory-rpc.ts
apps/daemon/test/fixtures/ascend/: README.md  ascend_test_00138.wav.txt  ascend_test_00193.wav.txt  ascend_test_00208.wav.txt  ascend_test_00226.wav.txt  ascend_test_00712.wav.txt  ascend_test_00938.wav.txt  ascend_test_01278.wav.txt  ascend_train_00015.wav.txt  ascend_train_00110.wav.txt  ascend_train_00806.wav.txt  ascend_train_02378.wav.txt  ascend_train_03520.wav.txt  ascend_train_05313.wav.txt  ascend_train_05804.wav.txt  ascend_train_07894.wav.txt  ascend_train_08743.wav.txt  ascend_train_09545.wav.txt  ascend_train_09555.wav.txt  ascend_validation_00037.wav.txt  ascend_validation_00403.wav.txt  manifest.json
apps/daemon/test/fixtures/spark-tts/: benedict_cumberbatch_en.wav.txt  benedict_cumberbatch_zh.wav.txt  dehua_en.wav.txt  dehua_zh.wav.txt  furina_prompt_en_zh.wav.txt  furina_prompt_zh_en.wav.txt  houyi_en.wav.txt  houyi_zh.wav.txt  jay_en.wav.txt  jay_zh.wav.txt  jialing_en.wav.txt  jialing_zh.wav.txt  lady_yin_en.wav.txt  lady_yin_zh.wav.txt  lijing_en.wav.txt  lijing_zh.wav.txt  luyu_en.wav.txt  luyu_zh.wav.txt  mayun_en.wav.txt  mayun_zh.wav.txt  nezha_en.wav.txt  nezha_zh.wav.txt  rick_en.wav.txt  (+16 more)
apps/desktop/: package.json  rspack.config.mjs  tsconfig.json
apps/desktop/icons/hicolor/: index.theme
apps/desktop/src/: application.ts  asr-provider-registry.ts  daemon-service-client.test.ts  daemon-service-client.ts  desktop-state.ts  gtk.ts  index.ts  provider-display.test.ts  provider-display.ts  status-animation-config-client.test.ts  status-animation-config-client.ts
apps/desktop/src/fcitx/: fcitx-key.test.ts  fcitx-key.ts  input-behavior-client.ts
apps/desktop/src/pages/: about-page.ts  ai-polishing-page.ts  diagnostics-page.ts  dictionary-page.ts  form-row.ts  input-behavior-page.ts  overview-page.ts  page-definition.ts  placeholder-page.ts  recognition-page.ts  text-processing-page.ts
apps/desktop/src/rpc/: daemon-rpc-client.test.ts  daemon-rpc-client.ts  daemon-socket-path.test.ts  daemon-socket-path.ts
apps/desktop/src/state/: config-state.test.ts  config-state.ts  daemon-service-state.test.ts  daemon-service-state.ts  daemon-state.test.ts  daemon-state.ts  dictionary-state.test.ts  dictionary-state.ts  gtk.test.ts  gtk.ts  index.test.ts  index.ts  input-behavior-state.test.ts  input-behavior-state.ts  input-method-diagnostics-state.test.ts  input-method-diagnostics-state.ts  status-animation-state.test.ts  status-animation-state.ts
apps/desktop/src/views/: app-window.ts
configs/: config.yaml  dictionary.yaml
docs/: configs.yaml  desktop-product-plan.md  session-flow.md  technical-plan.md
docs/coding-style/: Implementation.md  TypeScript.md  index.md
docs/tools/: tiny-cli.md
native/fcitx5-addon/: CMakeLists.txt
native/fcitx5-addon/data/: voxspell.conf.in
native/fcitx5-addon/src/: addon.cpp  config.h  content-length-codec.cpp  content-length-codec.h  daemon-client.cpp  daemon-client.h  error-presentation.cpp  error-presentation.h  rpc-protocol.h  status-animation.cpp  status-animation.h  tap-hold-state.cpp  tap-hold-state.h
native/fcitx5-addon/test/: config-default-test.cpp  content-length-codec-test.cpp  daemon-client-smoke.cpp  error-presentation-test.cpp  recurring-timer-test.cpp  run-daemon-client-smoke.mjs  status-animation-test.cpp  tap-hold-state-test.cpp
native/fcitx5-addon/test/mock-daemon/: mock-daemon.mjs
native/fcitx5-addon/tools/: qt-input-smoke.py  status-animation-preview.html
packaging/aur/: PKGBUILD.template  voxspell-bin.install
scripts/: clean.mts  release-aur.mjs  release-aur.mts  release-linux.mts  update-version.mts
(+3 files in other folders)
